--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
     
     <!-- CSS and Scripts -->
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     
     <!-- Structured Data - JSON-LD -->
     <script type="application/ld+json">
@@ -465,6 +464,7 @@
                 <a href="lineage.html" class="btn">Complete Lineage Analysis</a>
                 <a href="genetics.html" class="btn">DNA Revolution Science</a>
                 <a href="culture.html" class="btn">Cultural Heritage</a>
+                <a href="gemeni-infograph.html" class="btn">Visual Infographic</a>
                 <a href="contact.html" class="btn btn-outline">Contact Us for Research</a>
             </div>
         </section>
