--- a/research/neolithic-iberia-morocco-2023.html
+++ b/research/neolithic-iberia-morocco-2023.html
@@ -14,14 +14,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="Amazigh Lineage Heritage">
-    <meta property="og:title" content="Neolithic Iberia-Morocco Migration — Villalba-Mouco et al. 2023">
+    <meta property="og:title" content="Neolithic Iberia-Morocco Migration &mdash; Villalba-Mouco et al. 2023">
     <meta property="og:description" content="Ancient DNA from Neolithic Morocco confirms European ancestry and trans-Gibraltar migration.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/research/neolithic-iberia-morocco-2023.html">
     <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Neolithic Iberia-Morocco Migration — Villalba-Mouco et al. 2023">
+    <meta name="twitter:title" content="Neolithic Iberia-Morocco Migration &mdash; Villalba-Mouco et al. 2023">
     <meta name="twitter:description" content="Ancient DNA from Neolithic Morocco confirms trans-Gibraltar migration routes.">
     <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
 
@@ -29,7 +29,7 @@
     <link rel="canonical" href="https://aitmhend-dna.github.io/research/neolithic-iberia-morocco-2023.html">
 
     <!-- Favicon and Performance -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/E-PF2546-map.png">
     <meta name="theme-color" content="#CD7F32">
 
     <!-- Preconnect for Performance -->
@@ -45,7 +45,7 @@
       "@context": "https://schema.org",
       "@type": "ScholarlyArticle",
       "headline": "Northwest African Neolithic Initiated by Migrants from Iberia and Levant",
-      "description": "Summary of Villalba-Mouco et al. 2023 — ancient DNA from Neolithic Morocco revealing European Neolithic ancestry and trans-Gibraltar migration",
+      "description": "Summary of Villalba-Mouco et al. 2023 &mdash; ancient DNA from Neolithic Morocco revealing European Neolithic ancestry and trans-Gibraltar migration",
       "author": {
         "@type": "Organization",
         "name": "Amazigh Lineage Heritage Project"
@@ -108,56 +108,69 @@
     </nav>
 
     <main id="main-content" class="container" role="main">
+        <div class="editorial-meta" aria-label="Article metadata">
+            <span class="meta-pill">Summary updated: February 13, 2026</span>
+            <span class="meta-pill">Estimated read: 4 min</span>
+            <span class="meta-pill">Primary source: Nature (2023)</span>
+        </div>
 
-        <!-- Paper Info Card -->
-        <section class="card" style="margin-bottom: 2rem; border-top: 3px solid #D2691E;">
-            <div style="display: flex; align-items: flex-start; gap: 1rem; margin-bottom: 1rem; flex-wrap: wrap;">
-                <span style="font-size: 0.7rem; background: rgba(210, 105, 30, 0.12); color: #D2691E; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Ancient DNA</span>
-                <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.1); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Nature</span>
-                <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace; margin-left: auto;">June 2023</span>
+        <section class="card article-section paper-card-clay">
+            <div class="paper-meta-row">
+                <span class="paper-badge paper-badge-clay">Ancient DNA</span>
+                <span class="paper-badge paper-badge-journal">Nature</span>
+                <span class="paper-date">June 2023</span>
             </div>
-            <h2 style="font-size: 1.75rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.3;">Northwest African Neolithic Initiated by Migrants from Iberia and Levant</h2>
-            <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">Villalba-Mouco, V. et al. (2023). <em>Nature</em>, 618, 550&ndash;556.</p>
-            <a href="https://doi.org/10.1038/s41586-023-06166-6" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #D2691E; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #D2691E; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
+            <h2 class="paper-title">Northwest African Neolithic Initiated by Migrants from Iberia and Levant</h2>
+            <p class="paper-citation">Villalba-Mouco, V. et al. (2023). <em>Nature</em>, 618, 550&ndash;556.</p>
+            <a href="https://doi.org/10.1038/s41586-023-06166-6" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-clay">View Full Paper (DOI) &rarr;</a>
         </section>
 
-        <!-- Summary -->
-        <section class="card" style="margin-bottom: 2rem;">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Summary</h3>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">This groundbreaking study sequenced ancient DNA from Neolithic-era human remains found at multiple sites in Morocco, providing the first direct genetic evidence for how farming and pastoralism arrived in Northwest Africa. The transition from hunter-gatherer to agricultural societies in this region had long been debated.</p>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The ancient Moroccan genomes revealed a mixture of two ancestral components: one related to Neolithic European (specifically Iberian) farmers, and another related to Levantine Neolithic populations. This dual ancestry indicates that the Neolithic revolution in Northwest Africa was driven by actual migration of people, not just the diffusion of ideas and technologies.</p>
-            <p style="color: #475569; line-height: 1.8;">The European Neolithic component confirms trans-Gibraltar contact during the Neolithic period (~7,500&ndash;5,000 years ago), with genetic evidence of migration across the Strait of Gibraltar. The Levantine component suggests a parallel eastern route of migration, possibly through Egypt or along the Mediterranean coast.</p>
+        <section class="card article-section">
+            <h3>Summary</h3>
+            <p>This groundbreaking study sequenced ancient DNA from Neolithic-era human remains found at multiple sites in Morocco, providing the first direct genetic evidence for how farming and pastoralism arrived in Northwest Africa. The transition from hunter-gatherer to agricultural societies in this region had long been debated.</p>
+            <p>The ancient Moroccan genomes revealed a mixture of two ancestral components: one related to Neolithic European (specifically Iberian) farmers, and another related to Levantine Neolithic populations. This dual ancestry indicates that the Neolithic revolution in Northwest Africa was driven by actual migration of people, not just the diffusion of ideas and technologies.</p>
+            <p>The European Neolithic component confirms trans-Gibraltar contact during the Neolithic period (~7,500&ndash;5,000 years ago), with genetic evidence of migration across the Strait of Gibraltar. The Levantine component suggests a parallel eastern route of migration, possibly through Egypt or along the Mediterranean coast.</p>
         </section>
 
-        <!-- Key Takeaways -->
-        <section class="card" style="margin-bottom: 2rem; border-left: 3px solid #D2691E; background: linear-gradient(to right, rgba(210, 105, 30, 0.04), transparent);">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Key Takeaways</h3>
-            <ul style="color: #475569; line-height: 1.8; padding-left: 1.5rem;">
-                <li style="margin-bottom: 0.75rem;">First ancient DNA from Neolithic Morocco, directly dating the arrival of farming-associated lineages</li>
-                <li style="margin-bottom: 0.75rem;">Dual ancestry identified: Iberian Neolithic farmers + Levantine Neolithic populations</li>
-                <li style="margin-bottom: 0.75rem;">Confirms physical migration across the Strait of Gibraltar, not just cultural diffusion</li>
-                <li style="margin-bottom: 0.75rem;">The Neolithic transition in Northwest Africa occurred ~7,500&ndash;5,000 years before present</li>
-                <li>Indigenous Maghrebi (Mechta-Afalou) hunter-gatherer ancestry persisted alongside incoming Neolithic lineages, showing admixture rather than replacement</li>
+        <section class="card article-section takeaways-clay">
+            <h3>Key Takeaways</h3>
+            <ul class="takeaways-list">
+                <li>First ancient DNA from Neolithic Morocco, directly dating the arrival of farming-associated lineages</li>
+                <li>Dual ancestry identified: Iberian Neolithic farmers + Levantine Neolithic populations</li>
+                <li>Confirms physical migration across the Strait of Gibraltar, not just cultural diffusion</li>
+                <li>The Neolithic transition in Northwest Africa occurred ~7,500&ndash;5,000 years before present</li>
+                <li>Indigenous Maghrebi hunter-gatherer ancestry persisted alongside incoming Neolithic lineages, showing admixture rather than replacement</li>
             </ul>
         </section>
 
-        <!-- Relevance to Our Lineage -->
-        <section class="card" style="margin-bottom: 2rem;">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Relevance to Our Lineage</h3>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">This study provides the strongest direct evidence for the mechanism by which the H1 maternal lineage arrived in North Africa. The H1-T16189C! haplogroup discussed on our <a href="../lineage.html" style="color: #D2691E;">Lineage History</a> page originated in the Franco-Cantabrian refuge of southwestern Europe, and the Iberian Neolithic migration pathway documented in this paper represents the most likely route of arrival.</p>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The confirmation of trans-Gibraltar migration during the Neolithic period directly supports the timeline and route model presented on this site. The H1 lineage, dating to approximately 11,400 years before present, would have been carried by these migrating populations as they crossed from Iberia into Morocco.</p>
-            <p style="color: #475569; line-height: 1.8;">Importantly, the finding that indigenous Maghrebi ancestry persisted alongside incoming lineages mirrors the dual-origin pattern observed in the Chtouka lineage: the indigenous E-PF2546 paternal lineage coexisting with the European-origin H1 maternal lineage within the same population.</p>
+        <section class="card article-section">
+            <h3>Relevance to Our Lineage</h3>
+            <p>This study provides the strongest direct evidence for the mechanism by which the H1 maternal lineage arrived in North Africa. The H1-T16189C! haplogroup discussed on our <a href="../lineage.html" class="text-clay">Lineage History</a> page originated in the Franco-Cantabrian refuge of southwestern Europe, and the Iberian Neolithic migration pathway documented in this paper represents the most likely route of arrival.</p>
+            <p>The confirmation of trans-Gibraltar migration during the Neolithic period directly supports the timeline and route model presented on this site. The H1 lineage, dating to approximately 11,400 years before present, would have been carried by these migrating populations as they crossed from Iberia into Morocco.</p>
+            <p>Importantly, the finding that indigenous Maghrebi ancestry persisted alongside incoming lineages mirrors the dual-origin pattern observed in the Chtouka lineage: the indigenous E-PF2546 paternal lineage coexisting with the European-origin H1 maternal lineage within the same population.</p>
         </section>
 
-        <!-- Navigation -->
-        <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem; margin-bottom: 2rem;">
-            <a href="../research.html" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #D2691E; font-weight: 600; text-decoration: none; font-size: 0.95rem;">&larr; Back to Research</a>
-            <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
-                <a href="../lineage.html" class="btn btn-outline" style="border-color: #CD7F32; color: #CD7F32; font-size: 0.85rem;">Lineage History</a>
-                <a href="../genetics.html" class="btn btn-outline" style="border-color: #CC8E35; color: #CC8E35; font-size: 0.85rem;">Genetics</a>
+        <section class="card">
+            <h3>Related Reading</h3>
+            <div class="related-grid">
+                <a href="north-african-mitogenomes-2025.html" class="related-link-card">
+                    <h4>North African Mitogenomes (2025)</h4>
+                    <p>Large-scale mtDNA structure and female-mediated dispersals across the Maghreb.</p>
+                </a>
+                <a href="green-sahara-ancient-dna-2025.html" class="related-link-card">
+                    <h4>Green Sahara Ancient DNA (2025)</h4>
+                    <p>Earlier Saharan population structure during the African Humid Period.</p>
+                </a>
+            </div>
+        </section>
+
+        <div class="article-nav">
+            <a href="../research.html" class="article-back-link text-clay">&larr; Back to Research</a>
+            <div class="article-nav-actions">
+                <a href="../lineage.html" class="btn btn-outline btn-outline-copper btn-small">Lineage History</a>
+                <a href="../genetics.html" class="btn btn-outline btn-outline-ochre btn-small">Genetics</a>
             </div>
         </div>
-
     </main>
 
     <footer>
@@ -166,5 +179,3 @@
 
 </body>
 </html>
-
-
