--- a/research/north-african-mitogenomes-2025.html
+++ b/research/north-african-mitogenomes-2025.html
@@ -14,14 +14,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="Amazigh Lineage Heritage">
-    <meta property="og:title" content="North African Mitogenomes — Colombo et al. 2025">
+    <meta property="og:title" content="North African Mitogenomes &mdash; Colombo et al. 2025">
     <meta property="og:description" content="Massive mitogenome survey confirms H1 subclade distributions and female-mediated dispersals across North Africa.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/research/north-african-mitogenomes-2025.html">
     <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="North African Mitogenomes — Colombo et al. 2025">
+    <meta name="twitter:title" content="North African Mitogenomes &mdash; Colombo et al. 2025">
     <meta name="twitter:description" content="Massive mitogenome survey confirms H1 subclade distributions across North Africa.">
     <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
 
@@ -29,7 +29,7 @@
     <link rel="canonical" href="https://aitmhend-dna.github.io/research/north-african-mitogenomes-2025.html">
 
     <!-- Favicon and Performance -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/E-PF2546-map.png">
     <meta name="theme-color" content="#CD7F32">
 
     <!-- Preconnect for Performance -->
@@ -45,7 +45,7 @@
       "@context": "https://schema.org",
       "@type": "ScholarlyArticle",
       "headline": "The Origin of Modern North Africans as Depicted by a Massive Survey of Mitogenomes",
-      "description": "Summary of Colombo et al. 2025 — 733 modern and 43 ancient mitogenomes surveyed for North African maternal lineage patterns",
+      "description": "Summary of Colombo et al. 2025 &mdash; 733 modern and 43 ancient mitogenomes surveyed for North African maternal lineage patterns",
       "author": {
         "@type": "Organization",
         "name": "Amazigh Lineage Heritage Project"
@@ -108,56 +108,69 @@
     </nav>
 
     <main id="main-content" class="container" role="main">
+        <div class="editorial-meta" aria-label="Article metadata">
+            <span class="meta-pill">Summary updated: February 13, 2026</span>
+            <span class="meta-pill">Estimated read: 4 min</span>
+            <span class="meta-pill">Primary source: Scientific Reports (2025)</span>
+        </div>
 
-        <!-- Paper Info Card -->
-        <section class="card" style="margin-bottom: 2rem; border-top: 3px solid #CC8E35;">
-            <div style="display: flex; align-items: flex-start; gap: 1rem; margin-bottom: 1rem; flex-wrap: wrap;">
-                <span style="font-size: 0.7rem; background: rgba(204, 142, 53, 0.12); color: #CC8E35; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Mitochondrial DNA</span>
-                <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.1); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Scientific Reports</span>
-                <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace; margin-left: auto;">January 2025</span>
+        <section class="card article-section paper-card-ochre">
+            <div class="paper-meta-row">
+                <span class="paper-badge paper-badge-ochre">Mitochondrial DNA</span>
+                <span class="paper-badge paper-badge-journal">Scientific Reports</span>
+                <span class="paper-date">January 2025</span>
             </div>
-            <h2 style="font-size: 1.75rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.3;">The Origin of Modern North Africans as Depicted by a Massive Survey of Mitogenomes</h2>
-            <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">Colombo, G. et al. (2025). <em>Scientific Reports</em>.</p>
-            <a href="https://doi.org/10.1038/s41598-025-12209-x" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #CC8E35; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #CC8E35; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
+            <h2 class="paper-title">The Origin of Modern North Africans as Depicted by a Massive Survey of Mitogenomes</h2>
+            <p class="paper-citation">Colombo, G. et al. (2025). <em>Scientific Reports</em>.</p>
+            <a href="https://doi.org/10.1038/s41598-025-12209-x" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-ochre">View Full Paper (DOI) &rarr;</a>
         </section>
 
-        <!-- Summary -->
-        <section class="card" style="margin-bottom: 2rem;">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Summary</h3>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">This study represents the largest mitogenome survey of North African populations to date, analyzing 733 modern complete mitochondrial genomes alongside 43 ancient mitogenomes from across the region. The researchers reconstructed detailed phylogenetic trees for the major haplogroups found in North Africa.</p>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The study confirmed and refined the distribution of haplogroup H1 subclades (H1v, H1w, H1x) across North Africa, showing distinct frequency patterns between western and eastern populations. These H1 subclades are considered markers of prehistoric European-to-North African migration, most likely arriving during the late Pleistocene or early Holocene.</p>
-            <p style="color: #475569; line-height: 1.8;">Critically, the analysis demonstrated that female-mediated dispersals played a significant role in shaping North African genetic diversity, with multiple waves of maternal lineage movement detectable in the mitogenome data. The study also identified several previously uncharacterized sub-branches within established North African haplogroups.</p>
+        <section class="card article-section">
+            <h3>Summary</h3>
+            <p>This study represents the largest mitogenome survey of North African populations to date, analyzing 733 modern complete mitochondrial genomes alongside 43 ancient mitogenomes from across the region. The researchers reconstructed detailed phylogenetic trees for the major haplogroups found in North Africa.</p>
+            <p>The study confirmed and refined the distribution of haplogroup H1 subclades (H1v, H1w, H1x) across North Africa, showing distinct frequency patterns between western and eastern populations. These H1 subclades are considered markers of prehistoric European-to-North African migration, most likely arriving during the late Pleistocene or early Holocene.</p>
+            <p>Critically, the analysis demonstrated that female-mediated dispersals played a significant role in shaping North African genetic diversity, with multiple waves of maternal lineage movement detectable in the mitogenome data. The study also identified several previously uncharacterized sub-branches within established North African haplogroups.</p>
         </section>
 
-        <!-- Key Takeaways -->
-        <section class="card" style="margin-bottom: 2rem; border-left: 3px solid #CC8E35; background: linear-gradient(to right, rgba(204, 142, 53, 0.04), transparent);">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Key Takeaways</h3>
-            <ul style="color: #475569; line-height: 1.8; padding-left: 1.5rem;">
-                <li style="margin-bottom: 0.75rem;">Largest North African mitogenome study: 733 modern + 43 ancient complete mitochondrial sequences</li>
-                <li style="margin-bottom: 0.75rem;">Confirmed H1v, H1w, and H1x subclade distributions, with higher frequencies in western North Africa (Morocco, Algeria)</li>
-                <li style="margin-bottom: 0.75rem;">Female-mediated dispersals identified as a major factor in shaping North African genetic diversity</li>
-                <li style="margin-bottom: 0.75rem;">Multiple waves of maternal lineage movement detected, spanning from the late Pleistocene to the historical period</li>
+        <section class="card article-section takeaways-ochre">
+            <h3>Key Takeaways</h3>
+            <ul class="takeaways-list">
+                <li>Largest North African mitogenome study: 733 modern + 43 ancient complete mitochondrial sequences</li>
+                <li>Confirmed H1v, H1w, and H1x subclade distributions, with higher frequencies in western North Africa (Morocco, Algeria)</li>
+                <li>Female-mediated dispersals identified as a major factor in shaping North African genetic diversity</li>
+                <li>Multiple waves of maternal lineage movement detected, spanning from the late Pleistocene to the historical period</li>
                 <li>New sub-branches identified within established North African haplogroups, refining the phylogenetic tree</li>
             </ul>
         </section>
 
-        <!-- Relevance to Our Lineage -->
-        <section class="card" style="margin-bottom: 2rem;">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Relevance to Our Lineage</h3>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">This study is directly relevant to the maternal H1-T16189C! lineage discussed throughout this site. The confirmation of H1 subclade distributions in western North Africa, with particular concentration in Morocco, aligns precisely with the patterns described on our <a href="../lineage.html" style="color: #CC8E35;">Lineage History</a> page.</p>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The finding that H1 subclades arrived via female-mediated dispersals supports the migration model presented in our analysis: H1 lineages likely traveled from the Franco-Cantabrian refuge through Iberia and across the Strait of Gibraltar into North Africa during the late Pleistocene or Neolithic period.</p>
-            <p style="color: #475569; line-height: 1.8;">The study's scale provides statistical confidence in the H1 frequency patterns observed in the Souss-Massa and broader Moroccan Amazigh (Berber) populations, strengthening the evidence base for the dual paternal-maternal lineage model central to this project.</p>
+        <section class="card article-section">
+            <h3>Relevance to Our Lineage</h3>
+            <p>This study is directly relevant to the maternal H1-T16189C! lineage discussed throughout this site. The confirmation of H1 subclade distributions in western North Africa, with particular concentration in Morocco, aligns precisely with the patterns described on our <a href="../lineage.html" class="text-ochre">Lineage History</a> page.</p>
+            <p>The finding that H1 subclades arrived via female-mediated dispersals supports the migration model presented in our analysis: H1 lineages likely traveled from the Franco-Cantabrian refuge through Iberia and across the Strait of Gibraltar into North Africa during the late Pleistocene or Neolithic period.</p>
+            <p>The study's scale provides statistical confidence in the H1 frequency patterns observed in the Souss-Massa and broader Moroccan Amazigh (Berber) populations, strengthening the evidence base for the dual paternal-maternal lineage model central to this project.</p>
         </section>
 
-        <!-- Navigation -->
-        <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem; margin-bottom: 2rem;">
-            <a href="../research.html" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #CC8E35; font-weight: 600; text-decoration: none; font-size: 0.95rem;">&larr; Back to Research</a>
-            <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
-                <a href="../lineage.html" class="btn btn-outline" style="border-color: #CD7F32; color: #CD7F32; font-size: 0.85rem;">Lineage History</a>
-                <a href="../genetics.html" class="btn btn-outline" style="border-color: #CC8E35; color: #CC8E35; font-size: 0.85rem;">Genetics</a>
+        <section class="card">
+            <h3>Related Reading</h3>
+            <div class="related-grid">
+                <a href="green-sahara-ancient-dna-2025.html" class="related-link-card">
+                    <h4>Green Sahara Ancient DNA (2025)</h4>
+                    <p>Deep-time context for North African population structure before later historical expansions.</p>
+                </a>
+                <a href="neolithic-iberia-morocco-2023.html" class="related-link-card">
+                    <h4>Neolithic Iberia-Morocco (2023)</h4>
+                    <p>Ancient migration pathways linking Iberia and Northwest Africa.</p>
+                </a>
+            </div>
+        </section>
+
+        <div class="article-nav">
+            <a href="../research.html" class="article-back-link text-ochre">&larr; Back to Research</a>
+            <div class="article-nav-actions">
+                <a href="../lineage.html" class="btn btn-outline btn-outline-copper btn-small">Lineage History</a>
+                <a href="../genetics.html" class="btn btn-outline btn-outline-ochre btn-small">Genetics</a>
             </div>
         </div>
-
     </main>
 
     <footer>
@@ -166,5 +179,3 @@
 
 </body>
 </html>
-
-
