--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
     <link rel="canonical" href="https://aitmhend-dna.github.io/research.html">
 
     <!-- Favicon and Performance -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/E-PF2546-map.png">
     <meta name="theme-color" content="#CD7F32">
 
     <!-- Preconnect for Performance -->
@@ -197,6 +197,7 @@
 
 </body>
 </html>
+
 
 
 
