--- a/research/green-sahara-ancient-dna-2025.html
+++ b/research/green-sahara-ancient-dna-2025.html
@@ -29,7 +29,7 @@
     <link rel="canonical" href="https://aitmhend-dna.github.io/research/green-sahara-ancient-dna-2025.html">
 
     <!-- Favicon and Performance -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/img/E-PF2546-map.png">
     <meta name="theme-color" content="#CD7F32">
 
     <!-- Preconnect for Performance -->
@@ -218,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
